better error message

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       }
       else {
         item.style.backgroundColor = "red";
-        document.getElementById("errorMsg").innerText = item.id + " too high";
+        document.getElementById("errorMsg").innerText = item.id + " maximum is " + max;
       }
       return isOK;
     }
