--- a/index.html
+++ b/index.html
@@ -1,97 +1,255 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+        <script>
+            class PID {
+                constructor(kp, ki, kd) {
+                    this.kp = kp;
+                    this.ki = ki;
+                    this.kd = kd;
+                    this.previous_error = 0;
+                    this.last_input = 0;
+                    this.integral = 0;
+                    this.bias = 50;
+                    this.min = 20;
+                    this.max = 80;
+                }
+                compute(input, setpoint) {
+                    var error = setpoint - input;
+                    var derivative = error - this.previous_error;
 
-<head>
-  <script src="compute.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+                    this.integral += error;
+                    var integral_limit = this.max - this.min;
+                    if (this.integral > integral_limit) this.integral = integral_limit;
+                    if (this.integral < -integral_limit) this.integral = -integral_limit;
 
-<body>
-  <div class="wrapper">
-    <div class="square" style="float: left;">
-      <h1>Injector Pattern Calculator</h1>
-      <p>
-        Required Fuel Constant
-        <input id="reqFuel" step="0.1" type="number" min="0" max="25.5" value="12.0" onchange="compute();">
-      </p>
-      <p>
-        Injector Open Time
-        <input id="openTime" step="0.01" type="number" min="0" max="2.55" value="1.00" onchange="compute();">
-      </p>
-      <p>
-        Number of cylinders
-        <select id="nCylinders" onchange="disablePaired(this.value); compute();">
-          <option value=1>1</option>
-          <option value=2>2</option>
-          <option value=3>3</option>
-          <option value=4 selected>4</option>
-          <option value=5>5</option>
-          <option value=6>6</option>
-          <option value=8>8</option>
-        </select>
-      </p>
-      <p>
-        Number of squirts
-        <select id="nSquirts" onchange="compute()">
-          <option value=1 selected>1</option>
-          <option value=2>2</option>
-          <option value=3>3</option>
-          <option value=4>4</option>
-          <option value=5>5</option>
-          <option value=6>6</option>
-          <option value=8>8</option>
-        </select>
-      </p>
-      <p>
-        Timing
-        <select id="alternate" onchange="compute()">
-          <option value=0>Simultaneous</option>
-          <option value=1 selected>Alternating</option>
-        </select>
-      </p>
-      <p>
-        Pairing
-        <select id="paired" onchange="compute()">
-          <option value=0>Single</option>
-          <option value=1 selected>Paired</option>
-        </select>
-      </p>
-      <p>
-        Number of strokes
-        <select id="nStrokes" onchange="compute()">
-          <option value=0 selected>4-stroke</option>
-          <option value=1>2-stroke</option>
-        </select>
-      </p>
-    </div>
+                    var output = this.bias + Math.floor((this.kp * error + this.ki * this.integral + this.kd * derivative)/100);
+                    if (output > this.max) output = this.max;
+                    if (output < this.min) output = this.min;
 
-    <div class="square" style="float: right; margin-left:5px;">
-      <h1>Results</h1>
-      <p>PW:
-        <b class="out" id="PW"></b>ms
-      </p>
-      <p>Full Cycle:
-        <b class="out" id="cycle"></b>°
-      </p>
-      <br>
-      <p>Inj1:
-        <b class="out" id="inj1"></b>
-      </p>
-      <p>Inj2:
-        <b class="out" id="inj2"></b>
-      </p>
-      <p>Inj3:
-        <b class="out" id="inj3"></b>
-      </p>
-      <p>Inj4:
-        <b class="out" id="inj4"></b>
-      </p>
-    </div>
-  </div>
+                    this.previous_error = error;
 
-  <script>
-    compute();
-  </script>
-</body>
+                    return output;
+                }
+                computev1(input, setpoint) {
+                    var error = setpoint - input;
+                    this.integral += Math.floor((this.ki * error)/100);
+                    if(this.integral > this.max) this.integral = this.max;
+                    else if(this.integral < this.min) this.integral = this.min;
+                    var dInput = (input - this.last_input);
 
+                    /*Compute PID Output*/
+                    var output = Math.floor((this.kp * error)/100) + this.integral- Math.floor((this.kd * dInput)/100);
+
+                    if(output > this.max) { output = this.max; }
+                    else if(output < this.min) { output = this.min; }
+
+                    /*Remember some variables for next time*/
+                    this.last_input = input;
+                    //lastTime = now;
+                    return output;
+                }
+                computev2(input, setpoint, pOnE) {
+                    var error = setpoint - input;
+                    var dInput = (input - this.last_input);
+
+                    this.integral += Math.floor((this.ki * error)/1024); //Note that ki is multiplied by 1024 so it must be divided by 1024 here
+                    if(this.integral > this.max) { this.integral = this.max; }
+                    else if(this.integral < this.min) { this.integral = this.min; }
+                    
+                    /*Compute PID Output*/                    
+                    if(pOnE)
+                    {
+                        var output = (this.kp * error) + this.integral - Math.floor((this.kd * dInput)/128);
+                    }
+                    else
+                    {
+                        this.integral -= this.kp * dInput;
+                        if(this.integral > this.max) { this.integral = this.max; }
+                        else if(this.integral < this.min) { this.integral = this.min; }
+
+                        var output = this.integral - ((this.kd * dInput)/128);
+                    }
+                    
+
+                    if(output > this.max) output = this.max;
+                    else if(output < this.min) output = this.min;
+
+                    /*Remember some variables for next time*/
+                    this.last_input = input;
+
+                    return output;
+                }
+                computev3(input, setpoint, sens) {
+                    var sensitivity = 10001 - (sens * 2);
+                    var unitless_setpoint = Math.floor(((setpoint - 0) * 10000) / (sensitivity - 0));
+                    var unitless_input = Math.floor(((input - 0) * 10000) / (sensitivity - 0));
+                    var error = unitless_setpoint - unitless_input;
+
+                    this.integral += error;
+
+                    var bias = 50; //Base target DC%
+                    var output = 0;
+                    var limitMultiplier = 100;
+
+                    if(this.ki != 0)
+                    {
+                        output = ((this.max - bias) * limitMultiplier * 100) / this.ki;
+                        if (output < 0) { output = 0; }
+                    }
+                    if (this.integral > output) { this.integral = output; }
+
+                    if(this.ki != 0)
+                    {
+                        output = ((bias - this.min) * limitMultiplier * 100) / this.ki;
+                        if (output < 0) { output = 0; }
+                    }
+                    else { output = 0; }
+                    if (this.integral < -output) { this.integral = -output; }
+
+                    /*Compute PID Output*/
+                    output = (this.kp * error) + (this.ki * this.integral) + (this.kd * (error - this.previous_error));
+                    output = (bias * limitMultiplier) + (output / 10); //output is % multipled by 1000. To get % with 2 decimal places, divide it by 10. Likewise, bias is % in whole numbers. Multiply it by 100 to get it with 2 places.
+
+                    //if(output > (outMax * limitMultiplier)) { output  = (outMax * limitMultiplier);  }
+                    //if(output < (outMin * limitMultiplier)) { output  = (outMin * limitMultiplier);  }
+
+                    if(output > (this.max * limitMultiplier))
+                    { 
+                        output  = (this.max * limitMultiplier);
+                        this.integral -= error; //Prevent the ITerm from growing indefinitely whilst the output is being limited (error was added to ITerm above, so this is simply setting it back to it's original value)
+                    }
+                    if(output < (this.min * limitMultiplier)) 
+                    { 
+                        output  = (this.min * limitMultiplier);
+                        this.integral -= error; //Prevent the ITerm from growing indefinitely whilst the output is being limited (error was added to ITerm above, so this is simply setting it back to it's original value)
+                    }
+
+                    /*Remember some variables for next time*/
+                    this.previous_error = error;
+
+                    return output;
+                }
+            }
+        </script>
+    </head>
+    <body>
+        <div style="width: 75%; height: 75%;">
+            <canvas id="myChart"></canvas>
+        </div>
+        <div>
+            <b>Algorithm</b>
+            <select id='algorithm'>
+                <option value="1">PID</option>
+                <option value="2">integerPID</option>
+                <option value="3" selected>integerPID_ideal</option>
+                <option value="0">simple</option>
+            </select>
+        </div>
+        <div>
+            <b>P</b>
+            <input id="kp" type="number" value=20 min=0 max=200>
+            <b>I</b>
+            <input id="ki" type="number" value=2 min=0 max=200>
+            <b>D</b>
+            <input id="kd" type="number" value=10 min=0 max=200>
+        </div>
+        <div>
+            <b>Sensitivity</b>
+            <input id="sensitivity" type="number" value=2048 min=0 max=65535>
+            <input id="pOnE" type="checkbox" name="pOnE" value="true">pOnE<br>
+        </div>
+        <div>
+            <button  id="apply" type="button">Apply</button >
+        </div>
+        <script>
+            function computeValues(algorithm) {
+                myPID = new PID(document.getElementById('kp').value,document.getElementById('ki').value,document.getElementById('kd').value);
+                var inputs = [];
+                var outputs = [];
+                var targets = [];
+                if (algorithm == 3) {
+                    var input = 5000;
+                    var setpoint = 6000;
+                }
+                else {
+                    var input = 50;
+                    var setpoint = 60;
+                }
+                var output = 0;
+                for (i = 0; i < 250; i++) {
+                    if (algorithm == 1) output = myPID.computev1(input, setpoint);
+                    else if (algorithm == 2) output = myPID.computev2(input, setpoint, document.getElementById('pOnE').checked);
+                    else if (algorithm == 3) output = myPID.computev3(input, setpoint, document.getElementById('sensitivity').value);
+                    else output = myPID.compute(input, setpoint, 2047);
+                    if (i > 10) {
+                        inputs.push({x:i, y:input});
+                        outputs.push({x:i, y:output});
+                        targets.push({x:i, y:setpoint});
+                    }
+                    if (i > 10) input = Math.floor((input * 9 + output)/10);
+                    if (i == 128) setpoint = setpoint * 3/4;
+                }
+                return [inputs, outputs, targets]
+            }
+
+            function updateDataSets() {
+                algo = document.getElementById('algorithm').value;
+                tables = computeValues(algo);
+                scatterChart.data.datasets = [{
+                    label: 'Inputs',
+                    backgroundColor: 'rgb(255, 99, 132)',
+                    borderColor: 'rgb(255, 99, 132)',
+                    fill: false,
+                    tension: 0.2,
+                    showLine: true,
+                    data: tables[0]
+                },{
+                    label: 'Outputs',
+                    backgroundColor: 'rgb(99, 132, 255)',
+                    borderColor: 'rgb(99, 132, 255)',
+                    fill: false,
+                    tension: 0.2,
+                    showLine: true,
+                    data: tables[1]
+                },{
+                    label: 'Target',
+                    backgroundColor: 'rgb(132, 255, 99)',
+                    borderColor: 'rgb(132, 255, 99)',
+                    fill: false,
+                    tension: 0.2,
+                    showLine: true,
+                    data: tables[2]
+                }]
+                scatterChart.update();
+            }
+
+            var tables = computeValues(3);
+
+            var ctx = document.getElementById('myChart').getContext('2d');
+            var scatterChart = new Chart(ctx, {
+                type: 'scatter',
+                data: { datasets: [] },
+                options: {
+                    scales: {
+                        xAxes: [{
+                            type: 'linear',
+                            position: 'bottom'
+                        }]
+                    },
+                    elements: {
+                        point: {
+                            radius:0
+                        }
+                    }
+                }
+            });
+            updateDataSets();
+
+            document.getElementById('apply').addEventListener('click', function() {
+                updateDataSets();
+            });
+        </script>
+    </body>
 </html>
