--- a/index.html
+++ b/index.html
@@ -132,6 +132,93 @@
                     return output;
                 }
             }
+
+            function computeValues() {
+                algorithm = document.getElementById('algorithm').value;
+                var kp = document.getElementById('kp').value;
+                var ki = document.getElementById('ki').value;
+                var kd = document.getElementById('kd').value;
+                var sampleTime = 1;
+                var multipler = 1;
+
+                if (algorithm == 1) {
+                    ki = Math.floor(ki / 10);
+                    kd = kd * 10;
+                    sampleTime = 100;
+                }
+                else if (algorithm == 2) {
+                    ki = Math.floor(ki * 1024 / 4);
+                    kd = kd * 4;
+                    sampleTime = 250;
+                }
+                else if (algorithm == 3) {
+                    sampleTime = 20;
+                    multipler = 100;
+                }
+
+                // if (document.getElementById('reversed').checked) {
+                //     kp = -kp;
+                //     ki = -ki;
+                //     kd = -kd;
+                // }
+
+                myPID = new PID(kp,ki,kd);
+
+                var inputs = [];
+                var outputs = [];
+                var targets = [];
+                var input = 50 * multipler;
+                var setpoint = 60 * multipler;
+                var output = 0;
+
+                for (i = 0; i < 250; i++) {
+                    if (algorithm == 1) output = myPID.computev1(input, setpoint);
+                    else if (algorithm == 2) output = myPID.computev2(input, setpoint, document.getElementById('pOnE').checked);
+                    else if (algorithm == 3) output = myPID.computev3(input, setpoint, document.getElementById('sensitivity').value);
+                    else output = myPID.compute(input, setpoint);
+
+                    inputs.push({x:i*sampleTime/1000, y:input/multipler});
+                    outputs.push({x:i*sampleTime/1000, y:output/multipler});
+                    targets.push({x:i*sampleTime/1000, y:setpoint/multipler});
+
+                    if (i > 20) {
+                        input = Math.floor(input * 0.9 + output * 0.1);
+                    }
+                    if (i == 128) setpoint = 45 * multipler;
+                }
+
+                return [inputs, outputs, targets];
+            }
+
+            function updateDataSets() {
+                tables = computeValues();
+                scatterChart.data.datasets = [{
+                        label: 'Input',
+                        backgroundColor: 'rgb(255, 99, 132)',
+                        borderColor: 'rgb(255, 99, 132)',
+                        fill: false,
+                        tension: 0.2,
+                        showLine: true,
+                        data: tables[0]
+                    },{
+                        label: 'Output',
+                        backgroundColor: 'rgb(99, 132, 255)',
+                        borderColor: 'rgb(99, 132, 255)',
+                        fill: false,
+                        tension: 0.2,
+                        showLine: true,
+                        data: tables[1]
+                    },{
+                        label: 'Target',
+                        backgroundColor: 'rgb(132, 255, 99)',
+                        borderColor: 'rgb(132, 255, 99)',
+                        fill: false,
+                        tension: 0.2,
+                        showLine: true,
+                        data: tables[2]
+                    }];
+                scatterChart.update();
+            }
         </script>
     </head>
     <body>
@@ -157,96 +244,26 @@
         </div>
         <div>
             <b>Sensitivity</b>
-            <input id="sensitivity" type="number" value=2048 min=0 max=65535>
-            <input id="pOnE" type="checkbox" name="pOnE" value="true">pOnE<br>
+            <input id="sensitivity" type="number" value=2048 min=0 max=5000><br>
+            <input id="pOnE" type="checkbox" name="pOnE" value="true"> pOnE <br>
+            <!-- <input id="reversed" type="checkbox" name="reversed" value="true"> reversed <br> -->
         </div>
         <div>
             <button  id="apply" type="button">Apply</button >
         </div>
         <script>
-            function computeValues() {
-                algorithm = document.getElementById('algorithm').value;
-                var kp = document.getElementById('kp').value;
-                var ki = document.getElementById('ki').value
-                var kd = document.getElementById('kd').value
-                if (algorithm == 1) {
-                    ki = Math.floor(ki / 10);
-                    kd = kd * 10;
-                }
-                else if (algorithm == 2) {
-                    ki = Math.floor(ki * 1024 / 4);
-                    kd = kd * 4;
-                }
-                myPID = new PID(kp,ki,kd);
-                var inputs = [];
-                var outputs = [];
-                var targets = [];
-                if (algorithm == 3) {
-                    var input = 5000;
-                    var setpoint = 6000;
-                }
-                else {
-                    var input = 50;
-                    var setpoint = 60;
-                }
-                var output = 0;
-                for (i = 0; i < 250; i++) {
-                    if (algorithm == 1) output = myPID.computev1(input, setpoint);
-                    else if (algorithm == 2) output = myPID.computev2(input, setpoint, document.getElementById('pOnE').checked);
-                    else if (algorithm == 3) output = myPID.computev3(input, setpoint, document.getElementById('sensitivity').value);
-                    else output = myPID.compute(input, setpoint);
-
-                    inputs.push({x:i, y:input});
-                    outputs.push({x:i, y:output});
-                    targets.push({x:i, y:setpoint});
-
-                    if (i > 20) input = Math.floor(input * 0.9 + output * 0.1);
-                    if (i == 128) setpoint = setpoint * 3/4;
-                }
-                return [inputs, outputs, targets]
-            }
-
-            function updateDataSets() {
-                tables = computeValues();
-                scatterChart.data.datasets = [{
-                    label: 'Input',
-                    backgroundColor: 'rgb(255, 99, 132)',
-                    borderColor: 'rgb(255, 99, 132)',
-                    fill: false,
-                    tension: 0.2,
-                    showLine: true,
-                    data: tables[0]
-                },{
-                    label: 'Output',
-                    backgroundColor: 'rgb(99, 132, 255)',
-                    borderColor: 'rgb(99, 132, 255)',
-                    fill: false,
-                    tension: 0.2,
-                    showLine: true,
-                    data: tables[1]
-                },{
-                    label: 'Target',
-                    backgroundColor: 'rgb(132, 255, 99)',
-                    borderColor: 'rgb(132, 255, 99)',
-                    fill: false,
-                    tension: 0.2,
-                    showLine: true,
-                    data: tables[2]
-                }]
-                scatterChart.update();
-            }
-
-            var tables = computeValues(3);
-
-            var ctx = document.getElementById('myChart').getContext('2d');
-            var scatterChart = new Chart(ctx, {
+            var scatterChart = new Chart(document.getElementById('myChart').getContext('2d'), {
                 type: 'scatter',
                 data: { datasets: [] },
                 options: {
                     scales: {
                         xAxes: [{
                             type: 'linear',
-                            position: 'bottom'
+                            position: 'bottom',
+                            scaleLabel: {
+                                display: true,
+                                labelString: 'seconds'
+                            }
                         }]
                     },
                     elements: {
